Ensure cursor is valid if only --line is set

We need to make sure the cursor is valid if only the --line or only the --column argument is set.

To achieve this, set the default value for column and line to 0 and explicitly return an invalid cursor when both options are not set.

BUG: 453689